# grid-terminal

./: AGENTS.md  CONTRIBUTING.md  MIGRATION_NOTE.md  PROJECT_BOUNDARIES.md  README.md  ROADMAP.md  commit_narrative_update.bat  migrate_and_push.sh  package-lock.json  package.json
.molthub/: project.md
Open-Source Code/: README.md  README_OPENSOURCE.md
Open-Source Code/systems/architecture/: devnet-deploy.js  initialize-hook.js  submit-track1.js  submit-track3.js
Open-Source Code/systems/token/: README.md  config.json  (+2 more)
Source Code/: .gitignore  README_MIGRATION.md
Source Code/systems/token/programs/grid-fee-sweep/: Cargo.toml
Source Code/systems/token/programs/grid-fee-sweep/src/: lib.rs
Source Code/systems/token/programs/grid-transfer-hook/: Cargo.toml
Source Code/systems/token/programs/grid-transfer-hook/src/: lib.rs
docs/: 09_constitution.md  AGENT_IDENTITY.md  AI_FIREWALL.md  ARCHITECTURE.md  CONSTITUTION.md  DESIGN_SPEC_v2.2.md  GRID_TOKEN_SPEC.md  GRID_TRUST_EVIDENCE_V0.md  IDENTITY_ENFORCEMENT.md  INDUSTRIAL_WORKFLOW.md  INSURANCE_SPEC.md  KNOWLEDGE_CORE.md  KYA_SPEC.md  LOGGING_SPEC.md  SOVEREIGN_SWARM_WHITEPAPER_V2.3.md  SOVEREIGN_SWARM_WHITEPAPER_V3.1.md  TOKENOMICS.md  VEGRID_SPEC.md  doctrine-v2.md  grid-whitepaper.md  guardian_nodes.md  legal_terms.md  metadata.json  node_sale.md  summary.md  x402_PROTOCOL.md
docs/integrations/: molthub-grid-bridge-v0.md
scripts/: deploy_part3_mint.mjs  verify-boundaries.mjs
terminal/: package-lock.json
whitepaper/: Sovereign_Swarm_Whitepaper_v2.2.md  Sovereign_Swarm_Whitepaper_v2.3.md  ch02_vision.md
(+16 files in other folders)
